Major re-styling of the index page
* Add more images
* Adjust pargin/paddings/etc.

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -34,7 +34,7 @@ $text-color: #262626;
 $meta: #595959; //lowest gray for accessible color
 $link-color: $theme-color;
 $selection-color: #D4D4D4; // visible when highlighting text
-$blockquote-color: #EEF7FA; // $background-color;
+$blockquote-color: #F5F5F5; // background-color
 
 // Header
 $header-background-color: #fff;  // Only used when no header image
