Add link to Etsy shop
Clean-up of artboxONE links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,7 @@
     <!-- Menu -->
     <ul class="hide">
         <li>
-					<a class="clear" aria-label="Shop" title="Shop" href="{{ '/shop/' | relative_url }}">
+					<a class="clear" aria-label="Shop" title="Shop" href="{{ site.data.links.etsy }}" target="_blank">
 						Shop
 					</a>
 				</li>
