Rename tutorials section

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,8 +38,8 @@
         </li>
 				<li class="separator"> | </li>
 				<li>
-					<a class="clear" aria-label="Tutorials" title="Tutorials" href="{{ '/blog/' | relative_url }}">
-						Tutorials
+					<a class="clear" aria-label="Tipps" title="Tipps" href="{{ '/blog/' | relative_url }}">
+						Tipps
 					</a>
 				</li>
 				<li class="separator"> | </li>
