Remove handlettering blog link from navbar, minor content updates
* Handlettering blog will be removed soon.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,10 +38,10 @@
         </li>
 				<li class="separator"> | </li>
 				<li>
-					<a class="clear" aria-label="Tipps" title="Tipps" href="{{ '/blog/' | relative_url }}">
-						Tipps
+					<a class="clear" aria-label="Flipcharts" title="Flipcharts" href="{{ '/flipcharts/' | relative_url }}">
+						Flipcharts
 					</a>
-				</li>
+        </li>
 				<li class="separator"> | </li>
 				<li>
 					<a class="clear" aria-label="Kontakt" title="Kontakt" href="{{ '/kontakt/' | relative_url }}">
