Remove contact link from footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,7 @@
 
   <p class="text">
     &copy; {{ site.data.person.name }} 2021 &ndash;
-    <a href="mailto:{{ site.data.social.email_address }}">Kontakt</a>
-    | <a href="{{ site.baseurl }}/impressum/">Impressum</a>
+    <a href="{{ site.baseurl }}/impressum/">Impressum</a>
     | <a href="{{ site.baseurl }}/datenschutz/">Datenschutz</a>
   	<br/>
     Powered by <a href="https://jekyllrb.com/">Jekyll</a> with
