Add new page about sketchnotes
* Replace nav bar link flipcharts by sketchnotes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,8 +38,8 @@
         </li>
 				<li class="separator"> | </li>
 				<li>
-					<a class="clear" aria-label="Flipcharts" title="Flipcharts" href="{{ '/flipcharts/' | relative_url }}">
-						Flipcharts
+					<a class="clear" aria-label="Sketchnotes" title="Sketchnotes" href="{{ '/sketchnotes/' | relative_url }}">
+						Sketchnotes
 					</a>
         </li>
 				<li class="separator"> | </li>
