--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
-  <div class="footer-icons">
-    <ul>
-      <!-- Social icons from Font Awesome, if enabled -->
-      {% include icons.html %}
-    </ul>
-  </div>
+<!--  <div class="footer-icons">-->
+<!--    <ul>-->
+<!--      &lt;!&ndash; Social icons from Font Awesome, if enabled &ndash;&gt;-->
+<!--      {% include icons.html %}-->
+<!--    </ul>-->
+<!--  </div>-->
 
   <p class="text">
     &copy; {{ site.data.person.name }} 2021 &ndash;
